samples/_failures_safe/1761596327_041312_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8d91ef5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e8d91ef5.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_e8d91ef5.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8d91ef5.c:160:13: error: expected declaration or statement at end of input
